# exegia-api-py

./: .env.development  .gitignore  Caddyfile  Dockerfile  README.md  compose.yml  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.local.json
.github/actions/build-dist/: action.yml
.github/actions/bump-version/: action.yml
.github/actions/publish-pypi/: action.yml
.github/workflows/: publish.yml
.zed/: tasks.json
app/: __init__.py  config.py  supabase_client.py
scripts/: __init__.py  clean.py  dev_gui.py  generate_ssl.py  publish.py  publish.sh  setup.py  start.py  stop.py  work.py
src/exegia/: __init__.py
src/exegia/graphql/: __init__.py  corpus.py  types.py
src/exegia/mcp/: __init__.py  __main__.py  corpus.py  server.py
src/exegia/routers/: corpora.py
src/exegia/schemas/: __init__.py  corpus.py
src/exegia/storage/: client.py
src/exegia/supabase/: __init__.py  client.py  config.toml
src/exegia/utils/: __init__.py  connect.py  convert_epub_to_tf.py  convert_to_exg.py  parse_epub.py
supabase/: cert.pem  config.toml  key.pem
supabase/functions/convert-corpus/: deno.json  index.ts  type.ts
