[project]
name = "exegia-backend"
version = "0.1.0"
description = "Exegia API — Bible study backend with Context-Fabric corpus support"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # Workspace members
    "graphql",
    "corpus",
    "models",
    "routers",
    "schemas",
    "storage",
    # Web framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # GraphQL
    "strawberry-graphql[fastapi]>=0.314.0",
    # Corpus
    "text-fabric>=13.0.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Supabase
    "supabase>=2.0.0",
    "storage3>=0.7.0",
    # HTTP client
    "httpx>=0.27.0",
    # Config
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pyOpenSSL>=23.0.0",
    # Utilities
    "python-multipart>=0.0.9",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "uv-mcp>=0.3.0",
]

[tool.uv.sources]
graphql = { workspace = true }
corpus  = { workspace = true }
models  = { workspace = true }
schemas = { workspace = true }
auth = { workspace = true }
storage = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/auth",
    "packages/corpus",
    "packages/schemas",
    "packages/storage",
    "packages/utils",
    "packages/models",
    "packages/graphql",
]
